stop using this website on mobile. its really annoying for me

--- a/mainstyle.css
+++ b/mainstyle.css
@@ -86,7 +86,9 @@ body,
     place-items: center;
     z-index: 999;
 
-    transition: background-color 200ms ease;
+    transition:
+        background-color 200ms ease,
+        transform 750ms cubic-bezier(0.16, 0.3, 0.28, 1.02);
 }
 
 .scrolled {
@@ -259,24 +261,21 @@ body,
     -webkit-backdrop-filter: blur(50px);
     backdrop-filter: blur(50px);
 
-    justify-content: center;
-    align-items: center;
-
     z-index: 1000;
 }
 
 #big > #content {
-    padding: 0px 14vmin;
+    padding: 6vmin 14vmin;
     overflow-y: auto;
     height: 100%;
+    display: grid;
+    place-items: center;
 }
 
 #big > #content > .hidden {
     display: flex;
     flex-direction: column;
-    gap: 2vmin;
-    justify-content: center;
-    align-items: center;
+    gap: 2vh;
 }
 
 .leave {
