--- a/tinystyle.css
+++ b/tinystyle.css
@@ -12,7 +12,7 @@
 }
 
 .leave {
-    width: 8.8vw;
+    width: 14vw;
 }
 
 .blm_butthole > .caption {
